--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-tailwind-template",
+  "name": "react-tailwind",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
